Fix Android Webview Rendrer Scheduler background state

When the renderer is run in process, the backgrounding state does not
propagate properly to the RendererScheduler. This CL enables updating
the RendererSchduler background state even if the renderer is run in
process.

This fix is required to reland:
https://chromium-review.googlesource.com/c/chromium/src/+/847653

Bug: chromium:780191, chromium:798310
Change-Id: Ic4dc609de1884ecd9297ceb0b8774e4d4e313428
: 
Reviewed-on: https://chromium-review.googlesource.com/865769
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Fadi Meawad <fmeawad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529505}
Former-commit-id: e3b2cdc494c40bb7caf974806aad32043c7b6b62